# codeforces

./: .gitignore  231A_Team.cpp  282A_BitPP.cpp  4A_Watermelon.cpp  71A_WayTooLongWords.cpp  CMakeLists.txt  README.md
